# nrf-test

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.md  VERSION  prj.conf  spi_tft.dwf3work  spi_tft.txt
boards/: debug.conf  nrf5340dk_nrf5340_cpuapp.overlay
child_image/: hci_rpmsg.conf
dts/bindings/display/: buydisplay,gc9101.yaml
src/: main.cpp  main2.cpp
src/ble/: ams.cpp  ams.hpp  ancs.cpp  ancs.hpp  auth.cpp  auth.hpp  bas.cpp  bas.hpp  bt.cpp  bt.hpp  cts.cpp  cts.hpp  cts_client.cpp  cts_client.hpp  gap.cpp  gap.hpp  gatt_dm.cpp  gatt_dm.hpp  nus.cpp  nus.hpp  utils.cpp  utils.hpp
src/ble/services/: gadgetbridge.cpp  gadgetbridge.hpp  gap_client.cpp  gap_client.hpp
src/ble/services/gadgetbridge/: gb_parse.cpp  gb_parse.hpp  st_parse.cpp  st_parse.hpp
src/drivers/display/: gc9a01.cpp
src/drivers/input/: cst816s.cpp
src/managers/: bluetooth.cpp  bluetooth.hpp  devkit.cpp  devkit.hpp  display.cpp  display.hpp  hfclk.cpp
src/system/gadgetbridge/: gb.cpp  gb.hpp
src/ui/: ui.c  ui.h  ui_Screen1.c  ui_comp_hook.c  ui_events.cpp  ui_events.h  ui_font_MesloGLNerdFrontMono14.c  ui_font_MesloGLNerdFrontMono28.c  ui_font_MesloGLNerdFrontMono38.c  ui_helpers.c  ui_helpers.h  ui_settings.c  ui_simple_watchface.c  ui_stopwatch.c  ui_watchface.c
sysbuild/hci_rpmsg/: prj.conf
